fixed footer zoom alignment

--- a/less/body.css
+++ b/less/body.css
@@ -3,7 +3,7 @@
 }
 
 .body {
-  height: 665px;
+  height: 674px;
 }
 
 .bodyTextHead {
@@ -13,7 +13,7 @@
   margin: auto;
   padding-top: 260px;
   height: 40px;
-  width: 70%;
+  width: 90%;
   text-align: center;
 }
 
@@ -27,3 +27,4 @@
   width: 70%;
   text-align: center;
 }
+
